--- a/travelly/index.html
+++ b/travelly/index.html
@@ -27,66 +27,68 @@
             </ul>
         </nav>
     </header>
-    <section class="hero">
-        <h2>Travel beyond limits</h2>
-        <h3>Start your travel at an affordable price with Travelly<br>Contact us now.</h3>
-        <button>Book Now</button>
-    </section>
-    <section id="locations">
-        <header class="locations-header">
-            <h2>The perfect travelling experience</h2>
-            <h3>We cover everything from picking the perfect hotel<br>flight and travelling destination.</h3>
-            <img src="./img/cloud.png" alt="cloud" class="moving-cloud-1 cloud" />
-            <img src="./img/cloud.png" alt="cloud" class="moving-cloud-2 cloud" />
-        </header>
-    </section>
-    <section id="benefits">
-        <header class="benefits-header">
-            <h2>All benefits</h2>
-            <h3>We cover everything from picking the perfect hotel<br>flight and travelling destination.</h3>
-        </header>
-        <div class="cards">
-            <div class="card">
-                <div class="card-icon">
-                    <img src="./icons/route-solid.svg" alt="route-image">
-                </div>
-                <h4>Travel</h4>
-                <p>Travel in over 250 countries without any effort</p>
-            </div>
-            <div class="card">
-                <div class="card-icon">
-                    <img src="./icons/bed-solid.svg" alt="bed-image">
-                </div>
-                <h4>Hotels</h4>
-                <p>Hotels located in popular locations</p>
-            </div>
-            <div class="card">
-                <div class="card-icon">
-                    <img src="./icons/plane-departure-solid.svg" alt="airplane-image">
-                </div>
-                <h4>Flight</h4>
-                <p>Flight included in every purchased trip</p>
-            </div>
-        </div>
-    </section>
-    <section id="contact">
-        <div class="form-wrapper">
-            <header class="form-header">
-                <h2>Contact us</h2>
+    <main>
+        <section class="hero">
+            <h2>Travel beyond limits</h2>
+            <h3>Start your travel at an affordable price with Travelly<br>Contact us now.</h3>
+            <button>Book Now</button>
+        </section>
+        <section id="locations">
+            <header class="locations-header">
+                <h2>The perfect travelling experience</h2>
+                <h3>We cover everything from picking the perfect hotel<br>flight and travelling destination.</h3>
+                <img src="./img/cloud.png" alt="cloud" class="moving-cloud-1 cloud" />
+                <img src="./img/cloud.png" alt="cloud" class="moving-cloud-2 cloud" />
             </header>
-            <form>
-                <div class="name-form">
-                    <label for="name">Name:</label>
-                    <input type="text" name="name" id="name" required>
+        </section>
+        <section id="benefits">
+            <header class="benefits-header">
+                <h2>All benefits</h2>
+                <h3>We cover everything from picking the perfect hotel<br>flight and travelling destination.</h3>
+            </header>
+            <div class="cards">
+                <div class="card">
+                    <div class="card-icon">
+                        <img src="./icons/route-solid.svg" alt="route-image">
+                    </div>
+                    <h4>Travel</h4>
+                    <p>Travel in over 250 countries without any effort</p>
                 </div>
-                <div class="email-form">
-                    <label for="email">Email:</label>
-                    <input type="email" name="email" id="email" required>
+                <div class="card">
+                    <div class="card-icon">
+                        <img src="./icons/bed-solid.svg" alt="bed-image">
+                    </div>
+                    <h4>Hotels</h4>
+                    <p>Hotels located in popular locations</p>
                 </div>
-                <button type="submit">Submit</button>
-            </form>
-        </div>
-    </section>
+                <div class="card">
+                    <div class="card-icon">
+                        <img src="./icons/plane-departure-solid.svg" alt="airplane-image">
+                    </div>
+                    <h4>Flight</h4>
+                    <p>Flight included in every purchased trip</p>
+                </div>
+            </div>
+        </section>
+        <section id="contact">
+            <div class="form-wrapper">
+                <header class="form-header">fluttf
+                    <h2>Contact us</h2>
+                </header>
+                <form>
+                    <div class="name-form">
+                        <label for="name">Name:</label>
+                        <input type="text" name="name" id="name" required>
+                    </div>
+                    <div class="email-form">
+                        <label for="email">Email:</label>
+                        <input type="email" name="email" id="email" required>
+                    </div>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+        </section>
+    </main>
     <footer>
         <div class="footer-wrapper">
             <h5>Travelly &copy;</h5>
