--- a/elenaJoy/index.html
+++ b/elenaJoy/index.html
@@ -18,7 +18,7 @@
             <input class="menu-check" type="checkbox">
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-                <li><a href="#work">Work</a></li>
+                <li><a href="#gallery">Work</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="burger">
@@ -42,7 +42,7 @@
                 <img class="plant2 plant" src="./img/plant2.png" alt="Image of plant">
             </div>
         </section>
-        <section class="about">
+        <section id="about" class="about">
             <div class="about-image">
                 <h5>MINIMAL</h5>
                 <img src="./img/about-image.png" alt="Potrait image">
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </section>
-        <section class="gallery">
+        <section id="gallery" class="gallery">
             <header class="gallery-header">
                 <h2>Quality Photography</h2>
                 <p>Lorem ipsum dolor sit amet.</p>
@@ -75,7 +75,26 @@
             <img class="gallery3" src="./img/gallery-3.jpg" alt="Gallery image">
             <img class="gallery4" src="./img/gallery-4.jpg" alt="Gallery image">
         </section>
+        <section id="contact" class="contact">
+            <div class="form-wrapper flex">
+                <h2>Get in<br><span>touch.</span></h2>
+                <form>
+                    <label for="email">Your email</label>
+                    <input type="email" name="email" id="email" required>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+            <img src="./img/contact-image.jpg" alt="Contact image">
+        </section>
     </main>
+    <footer>
+        <h4>Elena Joy &copy; 2022</h4>
+        <ul>
+            <li><a href="#"><img src="./img/instagram 1.svg" alt="Instagram"></a></li>
+            <li><a href="#"><img src="./img/youtube-symbol 1.svg" alt="Youtube"></a></li>
+            <li><a href="#"><img src="./img/twitter 1.svg" alt="Twitter"></a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
